# konakona

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
src/: main.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.webmanifest
web/src/: App.tsx  index.css  sw.ts
