[package]
name = "konakona"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
actix-files = "0.6.8"
actix-web = "4.14.0"
chrono = "0.4.45"
env_logger = "0.11.11"
fern = "0.7.1"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio = { version = "1", features = ["fs"] }
